Toggle & Tooltips vertical alignment fixes

--- a/assets/scss/controls/toggle.scss
+++ b/assets/scss/controls/toggle.scss
@@ -21,6 +21,7 @@
     background: #ccc;
     vertical-align: middle;
     position: relative;
+    top: 4px;
     cursor: pointer;
     user-select: none;
     transition: background 350ms ease;
